apps/netbird/overlays/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata: { name: netbird-control, namespace: app-netbird }
spec:
  entryPoints: [web]
  routes:
    - kind: Rule
      match: Host(`netbird-control.dev0.sedware.net`) && (PathPrefix(`/signalexchange.SignalExchange/`) || PathPrefix(`/management.ManagementService/`))
      priority: 100
      services:
        - { name: netbird-server, port: 80, scheme: h2c }
    - kind: Rule
      match: Host(`netbird-control.dev0.sedware.net`)
      priority: 10
      services:
        - { name: netbird-server, port: 80 }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird-dashboard
  namespace: app-netbird
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: netbird.dev0.sedware.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: netbird-dashboard, port: { name: http } }
